added mapper and performed more work on the validation registration