@@ -9,6 +9,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Component
@@ -29,7 +30,7 @@ public class CategorySeeder implements CommandLineRunner {
             List<Category> categories = Arrays
                     .stream(ShipTypeEnum.values())
                     .map(Category::new)
-                    .toList();
+                    .collect(Collectors.toList());
 
             this.categoryRepository.saveAll(categories);
 
